# SwinIR-FontSR

./: .gitignore  README_FontSR.md  export_fontsr_predictions.py  fontsr_swinir_utils.py  pyproject.toml  requirements-fontsr-conda.txt  train_fontsr_swinir.py
configs/: fontsr_swinir_lr32_level1.yaml
